@@ -1,5 +1,5 @@
 /*
- * (C) Copyright 2010-2020 Nuxeo (http://nuxeo.com/) and others.
+ * (C) Copyright 2010-2025 Nuxeo (http://nuxeo.com/) and others.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -79,6 +79,7 @@ import org.apache.commons.io.FileUtils;
 import org.apache.commons.io.IOUtils;
 import org.apache.commons.lang3.ArrayUtils;
 import org.apache.commons.lang3.StringUtils;
+import org.apache.commons.lang3.Strings;
 import org.apache.commons.lang3.SystemUtils;
 import org.apache.logging.log4j.Level;
 import org.apache.logging.log4j.LogManager;
@@ -243,9 +244,10 @@ public class NuxeoLauncher {
 
     private static final String OPTION_ENCRYPT_ARG_NAME = "algorithm";
 
-    private static final String OPTION_ENCRYPT_DESC = String.format("Activate key value symmetric encryption.\n"
-            + "The algorithm can be configured: <%s> is a cipher transformation of the form: \"algorithm/mode/padding\" or \"algorithm\".\n"
-            + "Default value is \"%s\" (Advanced Encryption Standard, Electronic Cookbook Mode, PKCS5-style padding).",
+    private static final String OPTION_ENCRYPT_DESC = """
+            Activate key value symmetric encryption.
+            The algorithm can be configured: <%s> is a cipher transformation of the form: "algorithm/mode/padding" or "algorithm".
+            Default value is "%s" (Advanced Encryption Standard, Electronic Cookbook Mode, PKCS5-style padding).""".formatted(
             OPTION_ENCRYPT, Crypto.DEFAULT_ALGO);
 
     /** @since 7.4 */
@@ -253,18 +255,20 @@ public class NuxeoLauncher {
 
     private static final String OPTION_SET_ARG_NAME = "template";
 
-    private static final String OPTION_SET_DESC = String.format("Set the value for a given key.\n"
-            + "The value is stored in {{%s}} by default unless a template name is provided; "
-            + "if so, it is then stored in the template's {{%s}} file or {{nuxeo.NUXEO_ENVIRONMENT}} if later is defined in environment.\n"
-            + "If the value is empty (''), then the property is unset.\n"
-            + "This option is implicit if no '--get' or '--get-regexp' option is used and there are exactly two parameters (key value).",
+    private static final String OPTION_SET_DESC = """
+            Set the value for a given key.
+            The value is stored in {{%s}} by default unless a template name is provided; \
+            if so, it is then stored in the template's {{%s}} file or {{nuxeo.NUXEO_ENVIRONMENT}} if later is defined in environment.
+            If the value is empty (''), then the property is unset.
+            This option is implicit if no '--get' or '--get-regexp' option is used and there are exactly two parameters (key value).""".formatted(
             FILE_NUXEO_CONF, FILE_NUXEO_DEFAULTS);
 
     /** @since 7.4 */
     protected static final String OPTION_GET = "get";
 
-    private static final String OPTION_GET_DESC = "Get the value for a given key. Returns error code 6 if the key was not found.\n"
-            + "This option is implicit if '--set' option is not used and there are more or less than two parameters.";
+    private static final String OPTION_GET_DESC = """
+            Get the value for a given key. Returns error code 6 if the key was not found.
+            This option is implicit if '--set' option is not used and there are more or less than two parameters.""";
 
     /** @since 7.4 */
     protected static final String OPTION_GET_REGEXP = "get-regexp";
@@ -553,7 +557,7 @@ public class NuxeoLauncher {
      * @since 7.4
      */
     public boolean commandIs(String aCommand) {
-        return StringUtils.equalsIgnoreCase(command, aCommand);
+        return Strings.CI.equals(command, aCommand);
     }
 
     private boolean useGui = false;
@@ -562,6 +566,15 @@ public class NuxeoLauncher {
 
     private StatusServletClient statusServletClient;
 
+    /**
+     * Quiet parameter which mainly represents presence of {@code -q} option on command line.
+     * <p>
+     * The decision to log or not to the console is mainly handled by Log4j and its log level. INFO messages, or higher,
+     * are printed to the console in non-quiet mode, see {@code log4j2-launcher.xml} file. When {@code quiet} option is
+     * turned on, WARN messages, or higher, are printed to the console.
+     *
+     * @see #setQuiet()
+     */
     private static boolean quiet = false;
 
     private static boolean debug = false;
@@ -763,9 +776,9 @@ public class NuxeoLauncher {
     protected static Options initParserOptions() {
         Options options = new Options();
         // help option
-        options.addOption(Option.builder("h").longOpt(OPTION_HELP).desc(OPTION_HELP_DESC).build());
+        options.addOption(Option.builder("h").longOpt(OPTION_HELP).desc(OPTION_HELP_DESC).get());
         // Quiet option
-        options.addOption(Option.builder("q").longOpt(OPTION_QUIET).desc(OPTION_QUIET_DESC).build());
+        options.addOption(Option.builder("q").longOpt(OPTION_QUIET).desc(OPTION_QUIET_DESC).get());
         { // Debug options (mutually exclusive)
             OptionGroup debugOptions = new OptionGroup();
             // Debug option
@@ -776,7 +789,7 @@ public class NuxeoLauncher {
                                          .argName(OPTION_DEBUG_CATEGORY_ARG_NAME)
                                          .optionalArg(true)
                                          .valueSeparator(',')
-                                         .build());
+                                         .get());
             // Debug category option
             debugOptions.addOption(Option.builder(OPTION_DEBUG_CATEGORY)
                                          .desc(OPTION_DEBUG_CATEGORY_DESC)
@@ -784,7 +797,7 @@ public class NuxeoLauncher {
                                          .argName(OPTION_DEBUG_CATEGORY_ARG_NAME)
                                          .optionalArg(true)
                                          .valueSeparator(',')
-                                         .build());
+                                         .get());
             options.addOptionGroup(debugOptions);
         }
         // For help output purpose only: that option is managed and
@@ -792,58 +805,54 @@ public class NuxeoLauncher {
         options.addOption(Option.builder()
                                 .longOpt("debug-launcher")
                                 .desc("Linux-only. Activate Java debugging mode on the Launcher.")
-                                .build());
+                                .get());
         // Instance CLID option
-        options.addOption(Option.builder().longOpt(OPTION_CLID).desc(OPTION_CLID_DESC).hasArg().build());
+        options.addOption(Option.builder().longOpt(OPTION_CLID).desc(OPTION_CLID_DESC).hasArg().get());
         // Register offline option
-        options.addOption(Option.builder().longOpt(OPTION_OFFLINE).desc(OPTION_OFFLINE_DESC).build());
+        options.addOption(Option.builder().longOpt(OPTION_OFFLINE).desc(OPTION_OFFLINE_DESC).get());
         // Register renew option
-        options.addOption(Option.builder().longOpt(OPTION_RENEW).desc(OPTION_RENEW_DESC).build());
+        options.addOption(Option.builder().longOpt(OPTION_RENEW).desc(OPTION_RENEW_DESC).get());
         { // Output options (mutually exclusive)
             OptionGroup outputOptions = new OptionGroup();
             // XML option
-            outputOptions.addOption(Option.builder().longOpt(OPTION_XML).desc(OPTION_XML_DESC).build());
+            outputOptions.addOption(Option.builder().longOpt(OPTION_XML).desc(OPTION_XML_DESC).get());
             // JSON option
-            outputOptions.addOption(Option.builder().longOpt(OPTION_JSON).desc(OPTION_JSON_DESC).build());
+            outputOptions.addOption(Option.builder().longOpt(OPTION_JSON).desc(OPTION_JSON_DESC).get());
             options.addOptionGroup(outputOptions);
         }
         // GUI option
-        options.addOption(Option.builder()
-                                .longOpt(OPTION_GUI)
-                                .desc(OPTION_GUI_DESC)
-                                .hasArg()
-                                .argName("true|false|yes|no")
-                                .build());
+        options.addOption(
+                Option.builder().longOpt(OPTION_GUI).desc(OPTION_GUI_DESC).hasArg().argName("true|false|yes|no").get());
         // Package management option
-        options.addOption(Option.builder().longOpt(OPTION_NODEPS).desc(OPTION_NODEPS_DESC).build());
+        options.addOption(Option.builder().longOpt(OPTION_NODEPS).desc(OPTION_NODEPS_DESC).get());
         // Relax on target platform option
         options.addOption(Option.builder()
                                 .longOpt(OPTION_RELAX)
                                 .desc(OPTION_RELAX_DESC)
                                 .hasArg()
                                 .argName("true|false|yes|no|ask")
-                                .build());
+                                .get());
         // Accept option
         options.addOption(Option.builder()
                                 .longOpt(OPTION_ACCEPT)
                                 .desc(OPTION_ACCEPT_DESC)
                                 .hasArg()
                                 .argName("true|false|yes|no|ask")
-                                .build());
+                                .get());
         // Allow SNAPSHOT option
-        options.addOption(Option.builder("s").longOpt(OPTION_SNAPSHOT).desc(OPTION_SNAPSHOT_DESC).build());
+        options.addOption(Option.builder("s").longOpt(OPTION_SNAPSHOT).desc(OPTION_SNAPSHOT_DESC).get());
         // Force option
-        options.addOption(Option.builder("f").longOpt(OPTION_FORCE).desc(OPTION_FORCE_DESC).build());
+        options.addOption(Option.builder("f").longOpt(OPTION_FORCE).desc(OPTION_FORCE_DESC).get());
         // Strict option
-        options.addOption(Option.builder().longOpt(OPTION_STRICT).desc(OPTION_STRICT_DESC).build());
+        options.addOption(Option.builder().longOpt(OPTION_STRICT).desc(OPTION_STRICT_DESC).get());
         // lenient option
-        options.addOption(Option.builder().longOpt(OPTION_LENIENT).desc(OPTION_LENIENT_DESC).build());
+        options.addOption(Option.builder().longOpt(OPTION_LENIENT).desc(OPTION_LENIENT_DESC).get());
 
         // Ignore missing option
-        options.addOption(Option.builder("im").longOpt(OPTION_IGNORE_MISSING).desc(OPTION_IGNORE_MISSING_DESC).build());
+        options.addOption(Option.builder("im").longOpt(OPTION_IGNORE_MISSING).desc(OPTION_IGNORE_MISSING_DESC).get());
         // Hide deprecation warnings option
         options.addOption(
-                Option.builder("hdw").longOpt(OPTION_HIDE_DEPRECATION).desc(OPTION_HIDE_DEPRECATION_DESC).build());
+                Option.builder("hdw").longOpt(OPTION_HIDE_DEPRECATION).desc(OPTION_HIDE_DEPRECATION_DESC).get());
         // Encrypt option
         options.addOption(Option.builder()
                                 .longOpt(OPTION_ENCRYPT)
@@ -851,7 +860,7 @@ public class NuxeoLauncher {
                                 .hasArg()
                                 .argName(OPTION_ENCRYPT_ARG_NAME)
                                 .optionalArg(true)
-                                .build());
+                                .get());
         // Output options
         options.addOption(Option.builder()
                                 .longOpt(OPTION_GZIP_OUTPUT)
@@ -859,21 +868,21 @@ public class NuxeoLauncher {
                                 .hasArg()
                                 .argName("true|false")
                                 .optionalArg(true)
-                                .build());
+                                .get());
         options.addOption(Option.builder()
                                 .longOpt(OPTION_PRETTY_PRINT)
                                 .desc(OPTION_PRETTY_PRINT_DESC)
                                 .hasArg()
                                 .argName("true|false")
                                 .optionalArg(true)
-                                .build());
+                                .get());
         options.addOption(Option.builder()
                                 .longOpt(OPTION_OUTPUT)
                                 .desc(OPTION_OUTPUT_DESC)
                                 .hasArg()
                                 .argName("file")
                                 .optionalArg(true)
-                                .build());
+                                .get());
         { // Config options (mutually exclusive)
             OptionGroup configOptions = new OptionGroup();
             // Set option
@@ -883,9 +892,9 @@ public class NuxeoLauncher {
                                           .hasArg()
                                           .argName(OPTION_SET_ARG_NAME)
                                           .optionalArg(true)
-                                          .build());
-            configOptions.addOption(Option.builder().longOpt(OPTION_GET).desc(OPTION_GET_DESC).build());
-            configOptions.addOption(Option.builder().longOpt(OPTION_GET_REGEXP).desc(OPTION_GET_REGEXP_DESC).build());
+                                          .get());
+            configOptions.addOption(Option.builder().longOpt(OPTION_GET).desc(OPTION_GET_DESC).get());
+            configOptions.addOption(Option.builder().longOpt(OPTION_GET_REGEXP).desc(OPTION_GET_REGEXP_DESC).get());
             options.addOptionGroup(configOptions);
         }
         return options;
@@ -937,21 +946,19 @@ public class NuxeoLauncher {
             log.info("Restarting launcher...");
             System.exit(EXIT_CODE_LAUNCHER_CHANGED);
         } catch (ParseException e) {
-            log.error("Invalid command line: {}", e::getMessage);
-            log.debug(e, e);
+            log.atError().withThrowable(log.isDebugEnabled() ? e : null).log("Invalid command line: {}", e::getMessage);
             printShortHelp();
             System.exit(EXIT_CODE_INVALID);
         } catch (IOException | PackageException | ConfigurationException | GeneralSecurityException e) {
-            log.error(e.getMessage());
-            log.debug(e, e);
+            log.atError().withThrowable(log.isDebugEnabled() ? e : null).log(e.getMessage());
             System.exit(EXIT_CODE_INVALID);
         } catch (NuxeoLauncherException e) {
-            log.error(e.getMessage());
-            log.debug(e, e);
+            log.atError().withThrowable(log.isDebugEnabled() ? e : null).log(e.getMessage());
             System.exit(e.getExitCode());
         } catch (Exception e) {
-            log.error("Cannot execute command. {}", e.getMessage(), e);
-            log.debug(e, e);
+            log.atError()
+               .withThrowable(log.isDebugEnabled() ? e : null)
+               .log("Cannot execute command. {}", e::getMessage);
             System.exit(EXIT_CODE_ERROR);
         }
     }
@@ -972,12 +979,10 @@ public class NuxeoLauncher {
             printLongHelp();
         } else if (launcher.commandIs("status")) {
             String statusMsg = launcher.status();
-            if (!quiet) {
-                log.warn(statusMsg);
-                if (launcher.isStarted()) {
-                    log.info("Go to {}", launcher::getURL);
-                    log.info(launcher.getStartupSummary());
-                }
+            log.info(statusMsg);
+            if (launcher.isStarted()) {
+                log.info("Go to {}", launcher::getURL);
+                log.info(launcher.getStartupSummary());
             }
             // only case where exit status is not for error
             System.exit(launcher.getStatus());
@@ -1115,9 +1120,7 @@ public class NuxeoLauncher {
                 value = console.readLine(message);
             }
         } else { // try reading from stdin
-            if (!quiet) {
-                log.info(NO_NEW_LINE, message);
-            }
+            log.info(NO_NEW_LINE, message);
             value = STDIN.next();
             if (value == null || doRegexMatch && !predicate.test(value)) {
                 throw new ConfigurationException(error);
@@ -1135,9 +1138,7 @@ public class NuxeoLauncher {
         if (console != null) {
             return console.readPassword(message);
         } else { // try reading from stdin
-            if (!quiet) {
-                log.info(NO_NEW_LINE, message);
-            }
+            log.info(NO_NEW_LINE, message);
             return STDIN.next().toCharArray();
         }
     }
@@ -1158,9 +1159,7 @@ public class NuxeoLauncher {
         Console console = System.console();
         String message = "Instance type (dev|preprod|prod): [dev] ";
         if (console == null) {
-            if (!quiet) {
-                log.info(NO_NEW_LINE, message);
-            }
+            log.info(NO_NEW_LINE, message);
             String typeStr = STDIN.next();
             type = NuxeoClientInstanceType.fromString(typeStr);
             if (type == null) {
@@ -1397,16 +1396,14 @@ public class NuxeoLauncher {
             if (console != null) {
                 encryptedString = crypto.encrypt(algorithm, Crypto.getBytes(console.readPassword(message)));
             } else { // try reading from stdin
-                if (!quiet) {
-                    log.info(NO_NEW_LINE, message);
-                }
+                log.info(NO_NEW_LINE, message);
                 encryptedString = crypto.encrypt(algorithm, STDIN.next().getBytes());
             }
-            log.info(encryptedString);
+            log.warn(encryptedString);
         } else {
             for (String strToEncrypt : params) {
                 String encryptedString = crypto.encrypt(algorithm, strToEncrypt.getBytes());
-                log.info(encryptedString);
+                log.warn(encryptedString);
             }
         }
     }
@@ -1416,7 +1413,7 @@ public class NuxeoLauncher {
      */
     protected void decrypt() {
         Crypto crypto = configurationGenerator.getCrypto();
-        askCryptoKeyAndDecrypt(crypto, params).forEach(log::info);
+        askCryptoKeyAndDecrypt(crypto, params).forEach(log::warn);
     }
 
     protected List<String> askCryptoKeyAndDecrypt(Crypto crypto, String... values) {
@@ -1426,9 +1423,7 @@ public class NuxeoLauncher {
         if (console != null) {
             validKey = crypto.verifyKey(console.readPassword(message));
         } else { // try reading from stdin
-            if (!quiet) {
-                log.info(NO_NEW_LINE, message);
-            }
+            log.info(NO_NEW_LINE, message);
             validKey = crypto.verifyKey(STDIN.next().getBytes());
         }
         if (!validKey) {
@@ -1497,7 +1492,7 @@ public class NuxeoLauncher {
                 sb.append(value).append(newLine);
             }
         }
-        log.info(NO_NEW_LINE, sb.toString());
+        log.warn(NO_NEW_LINE, sb.toString());
     }
 
     /**
@@ -1531,9 +1526,7 @@ public class NuxeoLauncher {
                         value = console.readLine(fmt, key);
                     }
                 } else { // try reading from stdin
-                    if (!quiet) {
-                        log.info(NO_NEW_LINE, String.format(fmt, key));
-                    }
+                    log.info(NO_NEW_LINE, String.format(fmt, key));
                     if (doEncrypt) {
                         value = crypto.encrypt(algorithm, STDIN.next().getBytes());
                     } else if (isCryptKey) {
@@ -1563,9 +1556,7 @@ public class NuxeoLauncher {
      */
     public boolean doStart() {
         if (doStart(false).isAlive()) {
-            if (!quiet) {
-                log.info("Go to {}", this::getURL);
-            }
+            log.info("Go to {}", this::getURL);
             return true;
         }
         return false;
@@ -1583,9 +1574,7 @@ public class NuxeoLauncher {
             // noinspection unused
             try (var hook = new ShutdownHook(this)) {
                 waitForEffectiveStart(nuxeoProcess);
-                if (!quiet) {
-                    log.info("Go to {}", this::getURL);
-                }
+                log.info("Go to {}", this::getURL);
                 return true;
             } catch (InterruptedException e) {
                 Thread.currentThread().interrupt();
@@ -1611,9 +1600,7 @@ public class NuxeoLauncher {
             hook.close();
             throw e;
         }
-        if (!quiet) {
-            log.info("Go to {}", this::getURL);
-        }
+        log.info("Go to {}", this::getURL);
     }
 
     /**
@@ -1743,18 +1730,14 @@ public class NuxeoLauncher {
                 // delay will be 1s 10 times, then 2s 10 times... until reaching maximum of 1min
                 Thread.sleep(Math.min((++n / 10 + 1) * 1000, 60_000));
                 if (servletAvailable && statusServletClient.isStarted()) {
-                    if (!quiet) {
-                        log.info(".");
-                    }
+                    log.info(".");
                     break;
                 } else if (statusServletClient.init()) {
                     servletAvailable = true;
                     n = 0;
                 }
             } catch (SocketTimeoutException e) {
-                if (!quiet) {
-                    log.info(NO_NEW_LINE, ".");
-                }
+                log.info(NO_NEW_LINE, ".");
             }
         }
 
@@ -1777,9 +1760,7 @@ public class NuxeoLauncher {
         var duration = Duration.between(startTime, Instant.now());
         startSummary.append(String.format("Started in %dmin%02ds", duration.toMinutes(), duration.toSeconds() % 60));
         if (wasStartupFine()) {
-            if (!quiet) {
-                log.info(startSummary);
-            }
+            log.info(startSummary);
         } else {
             log.error(startSummary);
             if (strict) {
@@ -1854,9 +1835,7 @@ public class NuxeoLauncher {
                 log.warn("Server is not running.");
                 return;
             }
-            if (!quiet) {
-                log.info(NO_NEW_LINE, "Stopping server...");
-            }
+            log.info(NO_NEW_LINE, "Stopping server...");
             int stopMaxWait = Integer.parseInt(
                     configurationGenerator.getUserConfig().getProperty(STOP_MAX_WAIT_PARAM, STOP_MAX_WAIT_DEFAULT));
             var startTime = Instant.now();
@@ -1866,15 +1845,11 @@ public class NuxeoLauncher {
                 Process stopProcess = stop();
                 stopProcess.waitFor();
                 // at this point Tomcat has received and acknowledged the stop command
-                if (!quiet) {
-                    log.info(NO_NEW_LINE, ".");
-                }
+                log.info(NO_NEW_LINE, ".");
                 // don't send too many requests to Tomcat - we're going to re-try
                 Thread.sleep(1000);
             }
-            if (!quiet) {
-                log.info(".");
-            }
+            log.info(".");
             if (!isAliveAndNotZombie(nuxeoProcess)) {
                 Duration duration = Duration.between(startTime, Instant.now());
                 log.info(String.format("Stopped in %dmin%02ds", duration.toMinutes(), duration.toSecondsPart()));
